@@ -1,5 +1,7 @@
 == 2.7.3 ==
 Release date: February 8, 2023
+* Enhancement: Logo Carousel - Added direction option
+* Enhancement: Logo Carousel - Repeater items now show logo title instead of Logo Image text
 * Fixed: Twitter Tweet - Widget stopped working after Twitter API update
 * Fixed: Twitter Timeline - Widget stopped working after Twitter API update
 
